# CRM

./: .gitignore  Dockerfile  docker-compose.yml  requirements.txt  run.py
app/: create_admin.py  main.py
app/ai/: __init__.py  client_assistant.py  dependencies.py  models.py  prompts.py  support_assistant.py
app/ai/routers/: __init__.py  chat.py  meetings.py
app/api/endpoints/: admin.py  ai_assistant.py  auth.py  chat_support.py  clients.py  dashboard.py  deals.py  enddeals.py  interactions.py  news.py  notifications.py  segments.py  telephony.py
app/core/: config.py  database.py  notifications.py  segment_engine.py
app/models/: __init__.py  client.py  deal.py  enums.py  interaction.py  news.py  notification.py  segment.py  user.py  webhook.py
app/schemas/: client.py  deal.py  deall.py  interaction.py  news.py  segment.py  user.py
app/services/: ai_service.py  notification_service.py
app/websocket/: support_chat.py
chat-server/: Cargo.toml  Dockerfile
chat-server/src/: main.rs
frontend/: main.py
frontend/static/css/: notifications.css  style.css
frontend/static/js/: ai-chat.js  api.js  clients.js  main.js  notifications.js
frontend/templates/: about.html  articles.html  catalog.html  chat.html  clients.html  contacts.html  dashboard.html  delivery.html  index.html  login.html  news.html  profile.html  register.html  services.html  support_chat.html  terms.html
gateway/: Cargo.toml  Dockerfile
gateway/src/: main.rs
telephony-service/: Dockerfile
telephony-service/src/: config.rs  db.rs  models.rs
webhook-service/: Dockerfile  config.rs
(+27 files in other folders)
