[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["server", "client", "http1", "http2", "runtime"] }
hyper-rustls = "0.27.7"
rustls = "0.24.0-dev.0"
rustls-pemfile = "1"
tokio-rustls = "0.24"
http = "0.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
log = "0.4"
env_logger = "0.10"